# nfcsigner

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
.dart_tool/: package_config.json  package_graph.json
android/: build.gradle  consumer-rules.pro  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/bmc/nfcsigner/: NfcsignerPlugin.kt
android/src/main/kotlin/com/bmc/nfcsigner/core/: ApduCommandBuilder.kt  CardOperationManager.kt  DebugLogger.kt  ResponseHandler.kt  Transceiver.kt
android/src/main/kotlin/com/bmc/nfcsigner/models/: ApduResponse.kt  CardStatus.kt  SignatureConfig.kt
android/src/main/kotlin/com/bmc/nfcsigner/nfc/: NfcCardManager.kt  NfcTransceiver.kt
android/src/main/kotlin/com/bmc/nfcsigner/pdf/: AndroidXmlParserFactory.kt  PdfSigningHelper.kt
android/src/main/kotlin/com/bmc/nfcsigner/usb/: UsbCardManager.kt  UsbDeviceManager.kt  UsbTransceiver.kt
android/src/test/kotlin/com/bmc/nfcsigner/: NfcsignerPluginTest.kt
example/: README.md  pubspec.yaml
example/android/: build.gradle.kts
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/bmc/nfcsigner_example/: MainActivity.kt
example/android/app/src/main/res/xml/: device_filter.xml
example/integration_test/: plugin_integration_test.dart
example/ios/: Podfile
example/ios/Bcard/: Info.plist  Token.swift  TokenDriver.swift  TokenSession.swift
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/macos/RunnerTests/: RunnerTests.swift
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: nfcsigner.podspec
ios/Classes/: NfcsignerPlugin.swift  UsbCardManager.swift
lib/: nfcsigner.dart  nfcsigner_method_channel.dart  nfcsigner_platform_interface.dart  nfcsigner_web.dart
lib/models/: card_status.dart  pdf_signature_config.dart  service_result.dart  xml_signature_config.dart
lib/src/: crypto_utils.dart  xml_signer.dart
linux/: CMakeLists.txt  nfcsigner_plugin.cc  nfcsigner_plugin_private.h  nfcsigner_plugin_register.cpp
linux/include/nfcsigner/: nfcsigner_plugin.h
linux/test/: nfcsigner_plugin_test.cc
macos/: nfcsigner.podspec
macos/Classes/: NfcsignerPlugin.swift
test/: nfcsigner_method_channel_test.dart  nfcsigner_test.dart
windows/: CMakeLists.txt  nfcsigner_plugin.cpp  nfcsigner_plugin.h  nfcsigner_plugin_c_api.cpp
windows/include/nfcsigner/: nfcsigner_plugin_c_api.h
windows/test/: nfcsigner_plugin_test.cpp
